--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
-<app-server></app-server>
-<app-servers></app-servers>
+<div class="container">
+  <div class ="row">
+    <div class="col-xs-12">
+    <h3> I am in App Component </h3>
+    <hr>
+    <div class=app-servers></div>
+    <!-- <app-servers></app-servers> -->
+    </div>
+    </div>
+  </div>
+
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
