--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,4 @@
+<button class="tbn btn-primary" [disabled]="!allownewuser">Add Server</button>
+<p [innerText]="allownewuser"></p>
 <app-server></app-server>
 <app-server></app-server>
