--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,3 +1,4 @@
-<p>
+<p [ngStyle]="{backgroundColor: getcolor()}"
+[ngClass]="{online: serverStatus === 'online'}">
 Server with ID {{ serverId }} is {{ getserverstatus() }}
 </p>
