--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,19 @@
-<button class="tbn btn-primary" [disabled]="!allownewuser">Add Server</button>
-<p [innerText]="allownewuser"></p>
-<app-server></app-server>
-<app-server></app-server>
+<label>Server Name </label>
+<!-- <input 
+type="text"
+class="form-control"
+(input)="onupdateservername($event)"> -->
+<input 
+type="text"
+class="form-control"
+[(ngModel)]="servername">
+<!-- <p>{{servername}}</p> -->
+<button class="btn btn-primary" [disabled]="!allownewuser" 
+(click)="onservercreated()">Add Server</button>
+<!-- <p [innerText]="allownewuser"></p> -->
+<!-- <p>{{servercreationstatus}}</p> -->
+<p *ngIf="servercreated; else noserver">Server Created with name {{servername}}</p>
+<ng-template #noserver>
+  <p>No Server Created </p>
+</ng-template>
+<app-server *ngFor="let server of servers"></app-server>
